<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="126dp"
        android:background="@drawable/gambar"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/SignIn"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textColor="@color/colorDark"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.071" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/rounded2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        app:startIconTint="#FF5722">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:background="@drawable/rounded2"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        app:startIconDrawable="@drawable/ic_vpn_key_black_24dp"
        app:startIconTint="#FF9800">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:onClick="confirmInputLogin"
        android:text="@string/loginText"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/forgotPasswordText"
        android:textColor="@color/white"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>